--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,6 @@ a {
 }
 
 
-
-
 /* HEADER */
 .header {
   background: #292C34;
@@ -51,7 +49,11 @@ text-align: right;
 
 
 .toggle-buttons {
-  padding: 10px;
+  padding: 15px;
+}
+
+.btn {
+    margin-right: 2px;
 }
 
 /* CARDS */
@@ -72,6 +74,7 @@ a:hover {
 .side-image {
   width: 100%;
   border-radius: .35em;
+  padding-top: 5px;
 }
 
 
